src/tests/fixtures/arguments/OpaqueArgType.invalid.ts.expected
-----------------
INPUT
----------------- 
type SomeType = any;

/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello({ greeting }: SomeType): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/OpaqueArgType.invalid.ts:6:23 - error: Expected GraphQL field arguments to be typed using a literal object: `{someField: string}`. If there are no arguments, you can use `args: unknown`. Grats needs to be able to see the type of the arguments to generate a GraphQL schema.

6   hello({ greeting }: SomeType): string {
                        ~~~~~~~~
